Day-59-Network-Policies/authorized-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-frontend
  labels:
    app: web
    tier: frontend
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "3600"]
