Day-59-Network-Policies/backend-vault.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-database
  labels:
    app: database
    tier: backend
spec:
  containers:
  - name: redis
    image: redis:alpine
    ports:
    - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
spec:
  selector:
    app: database
  ports:
  - port: 6379
